Face orientation losses blue color when sculpting #66349

Closed
opened 2019-07-02 21:04:03 +02:00 by Tonatiuh de San Julián · 7 comments

System Information
Operating system: Linux-4.18.0-25-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 670MX/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-02 12:17, hash: 163996b681
Worked: (optional)

Short description of error
When you are in sculpt mode and you turn on the face orientation overlay, and then you sculpt, in the places where de brush make contact with the object, the blue color go away.

Exact steps for others to reproduce the error
In sculpt mode, active the face orientation overlay, sculpt and see the result

Captura de pantalla de 2019-07-02 21-00-49.png

**System Information** Operating system: Linux-4.18.0-25-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 670MX/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-02 12:17, hash: `163996b681` Worked: (optional) **Short description of error** When you are in sculpt mode and you turn on the face orientation overlay, and then you sculpt, in the places where de brush make contact with the object, the blue color go away. **Exact steps for others to reproduce the error** In sculpt mode, active the face orientation overlay, sculpt and see the result ![Captura de pantalla de 2019-07-02 21-00-49.png](https://archive.blender.org/developer/F7562450/Captura_de_pantalla_de_2019-07-02_21-00-49.png)

Added subscriber: @TonatiuhdeSanJulian

Added subscriber: @TonatiuhdeSanJulian

#66736 was marked as duplicate of this issue

#66736 was marked as duplicate of this issue
Member

Added subscribers: @fclem, @Jeroen-Bakker, @lichtwerk

Added subscribers: @fclem, @Jeroen-Bakker, @lichtwerk
Clément Foucault was assigned by Philipp Oeser 2019-07-03 13:47:00 +02:00
Member

Can confirm this is missing updates.

@Jeroen-Bakker , @fclem: would this be reasonable to support without performance hit?

Can confirm this is missing updates. @Jeroen-Bakker , @fclem: would this be reasonable to support without performance hit?
Member

Added subscriber: @V-prime

Added subscriber: @V-prime
Clément Foucault was unassigned by Dalai Felinto 2019-12-23 16:33:56 +01:00

This issue was referenced by 08d1df4729

This issue was referenced by 08d1df4729b670962ce0d61b275f9c5efe05c761
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-02-10 19:32:59 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66349
No description provided.